--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "antd": "^4.18.7",
+    "babel-plugin-import": "^1.13.3",
     "dva": "^2.4.1",
+    "history": "^5.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
